// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionList should match snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="reaction_list.screen"
>
  <Connect(SlideUpPanel)
    header={[Function]}
    headerHeight={37.5}
    initialPosition={0.55}
    onRequestClose={[Function]}
    theme={
      Object {
        "awayIndicator": "#ffbc1f",
        "buttonBg": "#1c58d9",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3f4350",
        "codeTheme": "github",
        "dndIndicator": "#d24b4e",
        "errorTextColor": "#d24b4e",
        "linkColor": "#386fe5",
        "mentionBg": "#ffffff",
        "mentionColor": "#1e325c",
        "mentionHighlightBg": "#ffd470",
        "mentionHighlightLink": "#1b1d22",
        "newMessageSeparator": "#cc8f00",
        "onlineIndicator": "#3db887",
        "sidebarBg": "#1e325c",
        "sidebarHeaderBg": "#192a4d",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarTeamBarBg": "#14213e",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#5d89ea",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#28427b",
        "sidebarUnreadText": "#ffffff",
        "type": "Denim",
      }
    }
  >
    <View
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="+1"
        teammateNameDisplay="username"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        user={
          Object {
            "id": "user_id_2",
            "username": "username_2",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(63,67,80,0.2)",
            "height": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "height": 45,
          "justifyContent": "center",
        }
      }
    >
      <ReactionRow
        emojiName="smile"
        teammateNameDisplay="username"
        theme={
          Object {
            "awayIndicator": "#ffbc1f",
            "buttonBg": "#1c58d9",
            "buttonColor": "#ffffff",
            "centerChannelBg": "#ffffff",
            "centerChannelColor": "#3f4350",
            "codeTheme": "github",
            "dndIndicator": "#d24b4e",
            "errorTextColor": "#d24b4e",
            "linkColor": "#386fe5",
            "mentionBg": "#ffffff",
            "mentionColor": "#1e325c",
            "mentionHighlightBg": "#ffd470",
            "mentionHighlightLink": "#1b1d22",
            "newMessageSeparator": "#cc8f00",
            "onlineIndicator": "#3db887",
            "sidebarBg": "#1e325c",
            "sidebarHeaderBg": "#192a4d",
            "sidebarHeaderTextColor": "#ffffff",
            "sidebarTeamBarBg": "#14213e",
            "sidebarText": "#ffffff",
            "sidebarTextActiveBorder": "#5d89ea",
            "sidebarTextActiveColor": "#ffffff",
            "sidebarTextHoverBg": "#28427b",
            "sidebarUnreadText": "#ffffff",
            "type": "Denim",
          }
        }
        user={
          Object {
            "id": "user_id_1",
            "username": "username_1",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "rgba(63,67,80,0.2)",
            "height": 1,
          }
        }
      />
    </View>
  </Connect(SlideUpPanel)>
</View>
`;

exports[`ReactionList should match snapshot, renderReactionRows 1`] = `
Array [
  <View
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="+1"
      teammateNameDisplay="username"
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      user={
        Object {
          "id": "user_id_2",
          "username": "username_2",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.2)",
          "height": 1,
        }
      }
    />
  </View>,
  <View
    style={
      Object {
        "height": 45,
        "justifyContent": "center",
      }
    }
  >
    <ReactionRow
      emojiName="smile"
      teammateNameDisplay="username"
      theme={
        Object {
          "awayIndicator": "#ffbc1f",
          "buttonBg": "#1c58d9",
          "buttonColor": "#ffffff",
          "centerChannelBg": "#ffffff",
          "centerChannelColor": "#3f4350",
          "codeTheme": "github",
          "dndIndicator": "#d24b4e",
          "errorTextColor": "#d24b4e",
          "linkColor": "#386fe5",
          "mentionBg": "#ffffff",
          "mentionColor": "#1e325c",
          "mentionHighlightBg": "#ffd470",
          "mentionHighlightLink": "#1b1d22",
          "newMessageSeparator": "#cc8f00",
          "onlineIndicator": "#3db887",
          "sidebarBg": "#1e325c",
          "sidebarHeaderBg": "#192a4d",
          "sidebarHeaderTextColor": "#ffffff",
          "sidebarTeamBarBg": "#14213e",
          "sidebarText": "#ffffff",
          "sidebarTextActiveBorder": "#5d89ea",
          "sidebarTextActiveColor": "#ffffff",
          "sidebarTextHoverBg": "#28427b",
          "sidebarUnreadText": "#ffffff",
          "type": "Denim",
        }
      }
      user={
        Object {
          "id": "user_id_1",
          "username": "username_1",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(63,67,80,0.2)",
          "height": 1,
        }
      }
    />
  </View>,
]
`;
